// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tooltip > rtl render > component should be rendered correctly in RTL direction 1`] = `
<div
  data-v-app=""
>
  <span>
    <!---->
  </span>
  <!---->
</div>
`;

exports[`tooltip > support arrow props by default 1`] = `
<div>
  <div
    data-v-app=""
  >
    <div
      aria-describedby="test-id"
      class="target target ant-tooltip-open"
    >
      target
    </div>
    <!--teleport start-->
    <!--teleport end-->
  </div>
  <div
    class="ant-tooltip ant-tooltip-css-var css-var-root ant-tooltip-placement-bottom"
    style="--arrow-x: 0px; --arrow-y: -6px; left: 0px; top: 12px; right: auto; bottom: auto; box-sizing: border-box;"
  >
    <div
      class="ant-tooltip-arrow"
      style="position: absolute; left: 0px; top: 0px;"
    >
      <span
        class="ant-tooltip-arrow-content"
      />
    </div>
    <div
      class="ant-tooltip-container"
      id="test-id"
      role="tooltip"
    >
      <!---->
    </div>
  </div>
</div>
`;

exports[`tooltip > support arrow props pass false to hide arrow 1`] = `
<div>
  <div
    data-v-app=""
  >
    <div
      aria-describedby="test-id"
      class="target target ant-tooltip-open"
    >
      target
    </div>
    <!--teleport start-->
    <!--teleport end-->
  </div>
  <div
    class="ant-tooltip ant-tooltip-css-var css-var-root ant-tooltip-placement-bottom"
    style="--arrow-x: 0px; --arrow-y: -6px; left: 0px; top: 12px; right: auto; bottom: auto; box-sizing: border-box;"
  >
    <!---->
    <div
      class="ant-tooltip-container"
      id="test-id"
      role="tooltip"
    >
      <!---->
    </div>
  </div>
</div>
`;
